--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-title font mt-3 fw-bold">Lắp đặt</h4>
-                                            <button class="button mt-3"><a href="#lienhe">Liên hệ ngay </a></button>
+                                            <button class="button mt-3"><a href="#lienhe" class="nav-link">Liên hệ ngay </a></button>
                                         </div>
                                     </div>
                                 </div>
@@ -129,7 +129,7 @@
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-title font mt-3 fw-bold">Vệ sinh </h4>
-                                            <button class="button mt-3"><a href="#lienhe">Liên hệ ngay </a></button>
+                                            <button class="button mt-3"><a href="#lienhe" class="nav-link">Liên hệ ngay </a></button>
                                         </div>
                                     </div>
                                 </div>
@@ -142,7 +142,7 @@
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-title font mt-3 fw-bold">Sửa chữa </h4>
-                                            <button class="button mt-3"><a href="#lienhe">Liên hệ ngay </a></button>
+                                            <button class="button mt-3"><a href="#lienhe" class="nav-link">Liên hệ ngay </a></button>
                                         </div>
                                     </div>
                                 </div>
