--- a/assets/index.html
+++ b/assets/index.html
@@ -18,7 +18,7 @@
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
          <link rel="stylesheet" href="/assets/css/data.css">
-        <link rel="stylesheet" href="/assets/css/index.css">
+        <link rel="stylesheet" href="/assets/css/style.css">
 
     </head>
 
