--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <link rel="web icon" type="png" href="/assets/img/logo.png">
+        <link rel="web icon" type="png" href="/img/logo.png">
         <!-- Bootstrap CSS v5.2.1 -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,8 +17,8 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-         <link rel="stylesheet" href="/assets/css/data.css">
-        <link rel="stylesheet" href="/assets/css/style.css">
+         <link rel="stylesheet" href="/css/data.css">
+        <link rel="stylesheet" href="/css/style.css">
 
     </head>
 
@@ -28,7 +28,7 @@
             <div class="container">
                 <div class="inner-menu ">
                     <nav class="navbar navbar-expand-sm ">
-                        <a href="index.html"><img src="/assets/img/logo.png" alt="Logo" class=" logo"></a>
+                        <a href="index.html"><img src="/img/logo.png" alt="Logo" class=" logo"></a>
                         <button
                             class="navbar-toggler d-lg-none"
                             type="button"
@@ -67,7 +67,7 @@
             </div>
         </header>
         <!-- end header -->
-        <img src="/assets/img/ea71bb_27587be15bf449e3933a012334862e16~mv2_d_3973_2235_s_2.webp" alt="" class="banner-img">
+        <img src="/img/ea71bb_27587be15bf449e3933a012334862e16~mv2_d_3973_2235_s_2.webp" alt="" class="banner-img">
         <main class="main mt-sm-5">
             <div class="container">
                 <div class="inner-warp">
@@ -85,7 +85,7 @@
                     <div class="row h-100 gap-0">
                         <div class="col-12 col-sm-6">
                             <div class="inner-img">
-                                <img src="/assets//img/453187679_2785021838342052_6658547688069634607_n.jpg" alt="">
+                                <img src="//img/453187679_2785021838342052_6658547688069634607_n.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-12 col-sm-6">
@@ -112,7 +112,7 @@
                                 <div class="inner-card">
                                     <div class="card text-start">
                                         <div class="card-img">
-                                            <img class="card-img-top" src="/assets/img/lapdatmaylanh.jpg" alt="Title"/>
+                                            <img class="card-img-top" src="/img/lapdatmaylanh.jpg" alt="Title"/>
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-title font mt-3 fw-bold">Lắp đặt</h4>
@@ -125,7 +125,7 @@
                                 <div class="inner-card">
                                     <div class="card text-start">
                                         <div class="card-img">
-                                            <img class="card-img-top" src="/assets/img/vesinh.jpg" alt="Title"/>
+                                            <img class="card-img-top" src="/img/vesinh.jpg" alt="Title"/>
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-title font mt-3 fw-bold">Vệ sinh </h4>
@@ -138,7 +138,7 @@
                                 <div class="inner-card">
                                     <div class="card text-start">
                                         <div class="card-img">
-                                            <img class="card-img-top" src="/assets/img/suachua.jpg" alt="Title"/>
+                                            <img class="card-img-top" src="/img/suachua.jpg" alt="Title"/>
                                         </div>
                                         <div class="card-body">
                                             <h4 class="card-title font mt-3 fw-bold">Sửa chữa </h4>
@@ -161,28 +161,28 @@
                             <div class="row g-4">
                                 <div class="col-6">
                                     <div class="box-img">
-                                        <img src="/assets/img/tu lanh.jpg" alt="img">
+                                        <img src="/img/tu lanh.jpg" alt="img">
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="box-img">
-                                        <img src="/assets/img/433242846_899219212213487_4516361186306740786_n.jpg" alt="img">
+                                        <img src="/img/433242846_899219212213487_4516361186306740786_n.jpg" alt="img">
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="box-img">
-                                        <img src="/assets/img/433100198_899219268880148_4091523252190576450_n.jpg" alt="img">
+                                        <img src="/img/433100198_899219268880148_4091523252190576450_n.jpg" alt="img">
                                     </div>
                                 </div>
                                 <div class="col-6">
                                     <div class="box-img">
-                                        <img src="/assets/img/máy lọc nước.jpg" alt="img">
+                                        <img src="/img/máy lọc nước.jpg" alt="img">
                                     </div>
                                 </div>
                             </div>
                        </div>
                        <div class="col-12 col-sm-4">
-                            <img src="/assets/img/432609208_899219298880145_612289338639226182_n.jpg" alt="">
+                            <img src="/img/432609208_899219298880145_612289338639226182_n.jpg" alt="">
                        </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
             <div class="row g-5">
                 <div class="col-12 col-sm-6 text-center ">
                     <a href="http://zalo.me/0866415559" target="_blank" class="hotline">
-                        <img src="/assets/img/Cell_phone.webp" class="img-phone" alt="">
+                        <img src="/img/Cell_phone.webp" class="img-phone" alt="">
                         <div class="title">
                             <h2 class="font">Hotline</h2>
                             <h3>0866415559</h3>
@@ -249,7 +249,7 @@
                     </a>
                 </div>
                 <div class="col-12 col-sm-6">
-                    <a target="_blank" href="https://www.facebook.com/TNVcosmetics"><img src="/assets/img/fanpage.png"class="img-fanpage" alt=""></a>
+                    <a target="_blank" href="https://www.facebook.com/TNVcosmetics"><img src="/img/fanpage.png"class="img-fanpage" alt=""></a>
                 </div>
             </div>
             </div>
