--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Điện Lạnh Hậu Phương</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -17,7 +17,7 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-         <link rel="stylesheet" href="/css/data.css">
+        <link rel="stylesheet" href="/css/data.css">
         <link rel="stylesheet" href="/css/style.css">
 
     </head>
@@ -27,7 +27,7 @@
         <header class="header" id="home">
             <div class="container">
                 <div class="inner-menu ">
-                    <nav class="navbar navbar-expand-sm ">
+                    <nav class="navbar navbar-expand-lg ">
                         <a href="index.html"><img src="/img/logo.png" alt="Logo" class=" logo"></a>
                         <button
                             class="navbar-toggler d-lg-none"
@@ -67,6 +67,7 @@
             </div>
         </header>
         <!-- end header -->
+         
         <img src="/img/ea71bb_27587be15bf449e3933a012334862e16~mv2_d_3973_2235_s_2.webp" alt="" class="banner-img">
         <main class="main mt-sm-5">
             <div class="container">
@@ -85,7 +86,7 @@
                     <div class="row h-100 gap-0">
                         <div class="col-12 col-sm-6">
                             <div class="inner-img">
-                                <img src="//img/453187679_2785021838342052_6658547688069634607_n.jpg" alt="">
+                                <img src="/img/453187679_2785021838342052_6658547688069634607_n.jpg" alt="">
                             </div>
                         </div>
                         <div class="col-12 col-sm-6">
@@ -219,7 +220,7 @@
                                 24/7 sẵn sàng phục vụ bạn và gia đình</p>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6">
+                    <div class="col-12 col-sm-6 col">
                         <div class="inner-box text-center">
                             <i class="fas fa-funnel-dollar text-white fs-1 p-4 rounded-4" style="background-color: var(--color-one);"></i>
                             <h2 class="font">Chi phí hợp lý</h2>
@@ -238,24 +239,25 @@
             <h1 class="font fw-bold text-center mb-5">Liên hệ</h1>
             <br>
             <br>
-            <div class="row g-5">
-                <div class="col-12 col-sm-6 text-center ">
-                    <a href="http://zalo.me/0866415559" target="_blank" class="hotline">
-                        <img src="/img/Cell_phone.webp" class="img-phone" alt="">
+            <div class="row g-5 g-sm-0">
+                <div class="col col-sm-5 text-center ">
+                    <a href="http://zalo.me/0866415559" target="_blank" class="hotline ">
+                        <img src="/img/Cell_phone.png" class="img-phone" alt="">
                         <div class="title">
                             <h2 class="font">Hotline</h2>
                             <h3>0866415559</h3>
                         </div>
                     </a>
                 </div>
-                <div class="col-12 col-sm-6">
+                <div class="col col-sm-6 text-center ">
                     <a target="_blank" href="https://www.facebook.com/TNVcosmetics"><img src="/img/fanpage.png"class="img-fanpage" alt=""></a>
                 </div>
             </div>
             </div>
+
         </section>
 
-        <footer class="footer">
+        <footer class="footer w-100">
             <!-- place footer here -->
             <h4 class="text-center text-white"><i class="fas fas fa-phone"> </i> Điện Lạnh Hậu Phương - 0866415559</h4>
         </footer>
