--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <h1 class="font fw-bold text-center mb-5">Liên hệ</h1>
             <br>
             <br>
-            <div class="row g-5 g-sm-0">
+            <div class="row g-5 g-sm-0 p-0">
                 <div class="col col-sm-5 text-center ">
                     <a href="http://zalo.me/0866415559" target="_blank" class="hotline ">
                         <img src="/img/Cell_phone.png" class="img-phone" alt="">
@@ -249,7 +249,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col col-sm-6 text-center ">
+                <div class="col col-sm-6 text-center p-0">
                     <a target="_blank" href="https://www.facebook.com/TNVcosmetics"><img src="/img/fanpage.png"class="img-fanpage" alt=""></a>
                 </div>
             </div>
